# TokNology

./: .env  .gitignore  README.md  docker-compose.yml  hackathon_plan.docx
backend/: .env.example  Dockerfile  dbSetup.js  package-lock.json  package.json  server.js
lawfinder_gemini_env/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
lawfinder_gemini_env/lawfinder/: __init__.py  agent.py  chunk.py  clean.py  cli.py  embed_store.py  fetch.py  guardrails.py  llm_rank.py  schemas.py  search.py  seeds.py  service.py
lawfinder_gemini_env/lawfinder.egg-info/: SOURCES.txt  requires.txt
risk_evaluator/: .dockerignore  .env  Dockerfile  README.md  app.py  requirements.txt
toknology-frontend/: .gitignore  index.html  package-lock.json  package.json  server.js  vite.config.js
toknology-frontend/src/: App.jsx
toknology-frontend/src/components/: AgentPanel.jsx  AuditLog.jsx  FeedbackPane.jsx  IntakeForm.jsx  LearningDrawer.jsx  Primitives.jsx  ResultsPane.jsx  TokBot.jsx
toknology-frontend/src/hooks/: useDummyAnalyzer.js
toknology-frontend/src/utils/: backend.js  exports.js
